# ECS171-Movie-Rec

./: .gitignore  BrayanModel.ipynb  Eugene-Model-Training.ipynb  Kyle-Model-Training.ipynb  Patrick-Model-Training.ipynb  README.md  Untitled1 (1).ipynb
Webapp/: .gitignore  README.md  pyproject.toml
Webapp/backend/app/: __init__.py
Webapp/backend/app/api/: routes.py
Webapp/backend/app/models/: base_model.py  eugene_model.py  kyle_model.py  patrick_model.py  sbert_model.py
Webapp/frontend/: package-lock.json  package.json
Webapp/frontend/public/: index.html
Webapp/frontend/src/: App.css  App.tsx
Webapp/frontend/src/services/: api.ts
Webapp/frontend/src/types/: index.ts
